omniauth for facebook login

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -85,7 +85,7 @@ div.alert.alert-danger, div.alert.node-saved, {
   margin: 0 auto;
 }
 
-.fa-google-plus-square, .fa-github {
+.fa-google-plus-square, .fa-github, .fa-facebook-square {
   margin: 0 .2em;
 }
 
