--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -40,7 +40,7 @@
 
 <% else %>
   <div class="logout">
-    <p><%= "#{@username}" %>
+    <p><%= "#{@user.username}" %>
       <%= link_to "Logout", logout_path, method: :delete, class: 'btn btn-default' %>
     </p>
   </div>
