--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,10 +12,10 @@
       <%= f.text_field :email, class: "form-control", required: true %>
 
       <%= f.label :password %>
-      <%= f.text_field :password, class: "form-control", required: true %>
+      <%= f.password_field :password, class: "form-control", required: true %>
 
       <%= f.label :password_confirmation, "Password Confirmation" %>
-      <%= f.text_field :password_confirmation, class: "form-control", required: true %>
+      <%= f.password_field :password_confirmation, class: "form-control", required: true %>
       </div>
     </fieldset>
 
