--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
     <%= link_to root_path, method: :get, class: 'title' do %>
       <h1><i class="fa fa-bicycle"></i> bspoked <i class="fa fa-bicycle"></i></h1>
     <% end %>
+    <p class="tagline">Your path forward.</p>
   </div>
 </div>
 
