styling and better errors for user sign in and edit

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,7 @@
   <h3>SIGN UP!</h3>
 
   <%= form_for @user, method: :post, class: "user" do |f| %>
+    <%= render 'shared/error_messages' %>
 
     <fieldset>
       <div class="form-group">
