--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -75,6 +75,10 @@ div.alert.alert-danger, div.alert.node-saved {
   margin-bottom: 0;
 }
 
+.form-errors {
+  color: #F60131;
+}
+
 .login {
   position: absolute;
   margin: 0;
@@ -83,6 +87,10 @@ div.alert.alert-danger, div.alert.node-saved {
   text-align: center;
   background-color: rgba(255, 255, 255, 0.7);
   z-index: 100;
+}
+
+.btn-form {
+  margin-top: 5px;
 }
 
 .login-links {
@@ -152,7 +160,6 @@ div.leaflet-control-attribution, div.leaflet-compact-attribution {
   padding: .4em;
   text-align: center;
   z-index: 99;
-
 }
 
 #directions {
