--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,28 +1,28 @@
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <h1>Update your profile:</h1>
+      <div class='form-group'>
+        <%= form_for(@user) do |f| %>
+          <%= render 'shared/error_messages' %>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <h1>Update your profile:</h1>
-    <div class='form-group'>
-      <%= form_for(@user) do |f| %>
+          <%= f.label :username %>
+          <%= f.text_field :username, class: 'form-control' %>
 
-        <%= f.label :username %>
-        <%= f.text_field :username, class: 'form-control' %>
+          <%= f.label :email %>
+          <%= f.email_field :email, class: 'form-control' %>
 
-        <%= f.label :email %>
-        <%= f.email_field :email, class: 'form-control' %>
+          <%= f.label :password %>
+          <%= f.password_field :password, class: 'form-control' %>
 
-        <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control' %>
+          <%= f.label :password_confirmation, "Confirmation" %>
+          <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-        <%= f.label :password_confirmation, "Confirmation" %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
+          <%= f.submit "Save changes", class: "btn btn-primary btn-form" %>
+          <%= link_to "Go back", user_path(@user.id), class: "btn btn-default btn-form" %>
 
-        <%= f.submit "Save changes", class: "btn btn-primary" %>
-        <%= link_to "Go back", user_path(@user.id), class: "btn btn-default" %>
-
-      <% end %>
+        <% end %>
+      </div>
     </div>
-
-
   </div>
 </div>
