minor styling - .location-submit button

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -93,6 +93,10 @@ div.alert.alert-danger, div.alert.node-saved {
   margin-top: 5px;
 }
 
+.location-submit {
+  margin-bottom: 5px;
+}
+
 .login-links {
   text-align: center;
   margin: 0 auto;
