--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>bspoked</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
-  <script src="https://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
+  <script src="//cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
   <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
 
   <!-- NOTE: Below are for mapbox -->
