--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -39,12 +39,19 @@
   </div>
 
 <% else %>
-  <div class="logout">
+
+  <!-- <div class="logout">
     <p><%= @user.username %>
       <%= link_to "Logout", logout_path, method: :delete, class: 'btn btn-default' %>
     </p>
-  </div>
+  </div> -->
 <% end %>
+
+<div class="menu">
+  <%= link_to menu_path do %>
+    <span class="menu-bars col-xs-4 fa fa-bars fa-3x" aria-hidden="true" data-toggle="tooltip" title="more options"></span>
+  <% end %>
+</div>
 
 <div class="nav-bar">
   <footer>
@@ -90,4 +97,8 @@
 
 <div id="directions">
   <div id="instructions"></div>
+</div>
+
+<div id="menu-list">
+
 </div>
