--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -77,7 +77,7 @@
     <span class="menu-bars col-xs-4 fa fa-bars fa-3x" aria-hidden="true" data-toggle="tooltip" title="more options"></span>
 </div>
 
-<div id="menu-list">
+<div id="menu-list" class="slide-left">
   <% if session[:user_id] %>
     <p><%= @user.username %></p>
     <p>
