color of all links

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,6 +6,14 @@ body {
   padding: 0;
 }
 
+a {
+  color: #1269D2;
+}
+
+a:hover {
+  color: #0854AE;
+}
+
 a, a:hover, a:active, a:visited {
   text-decoration: none;
 }
