--- a/app/views/locations/touring_info.html.erb
+++ b/app/views/locations/touring_info.html.erb
@@ -1,1 +1,3 @@
-<h1>bike touring in the Netherlands</h1>
+<div class="container-fluid">
+  <h1>bike touring in the Netherlands is amazing</h1>
+</div>
