--- a/app/views/locations/about.html.erb
+++ b/app/views/locations/about.html.erb
@@ -1,3 +1,37 @@
 <div class="container-fluid">
   <h1>about bspoked</h1>
 </div>
+
+<div id="aboutCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <!-- TODO: fix/update or remove -->
+  <ol class="carousel-indicators">
+    <li data-target="#aboutCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#aboutCarousel" data-slide-to="1"></li>
+    <li data-target="#aboutCarousel" data-slide-to="2"></li>
+    <li data-target="#aboutCarousel" data-slide-to="3"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <%=image_tag("about-bspoked/about-bspoked1.png", alt: "about bspoked slide", class: "carousel-img")%>
+    </div>
+
+    <% (2..22).to_a.each do |num| %>
+      <div class="item">
+        <%=image_tag("about-bspoked/about-bspoked#{num}.png", alt: "about bspoked slide", class: "carousel-img")%>
+      </div>
+    <% end %>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#aboutCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#aboutCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
