Title color change

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -45,12 +45,12 @@ a, a:hover, a:active, a:visited {
 
 a.title {
   text-align: center;
-  color: #01D298;
+  color: #0854AE;
 }
 
 a.title:hover {
   text-align: center;
-  color: #00AE7E;
+  color: #1769CB;
 }
 
 .register {
