--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -83,7 +83,8 @@
     <p><%= link_to "Logout", logout_path, method: :delete %></p>
   <% end %>
   <p><%= link_to "About", about_path %></p>
-  <p><%= link_to "Bike touring info", touring_path %></p>
+  <!-- TODO: Uncomment when touring resources pg ready. -->
+  <!-- <p><%= link_to "Bike touring info", touring_path %></p> -->
 </div>
 
 <div class="save-location">
