--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,4 @@
-<div class="jumbotron title" id="jumbo">
-  <div class="container">
-    <%= link_to root_path, method: :get, class: 'title' do %>
-      <h1><i class="fa fa-bicycle"></i> bspoked <i class="fa fa-bicycle"></i></h1>
-    <% end %>
-    <p class="tagline">Your path forward.</p>
-  </div>
-</div>
+<%= render 'shared/title_jumbotron' %>
 
 <div class="container-fluid">
   <div class="col-sm-6">
